--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body {
     @apply bg-[#635fc7] py-2 px-4 rounded-full text-white text-lg font-semibold hover:opacity-80 duration-200;
   }
 }
+
+.dropdown {
+  background-color: #00000080;
+}
