--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,10 @@ body {
 .dropdown {
   background-color: #00000080;
 }
+
+.select-status {
+  background-image: url("./assets/icon-chevron-down.svg");
+  appearance: none;
+  background-repeat: no-repeat;
+  background-position: right 16px top 50%;
+}
